# surt-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
test_data/: surt.json
