[package]
name = "surt-rs"
version = "0.1.1"
authors = ["Mark Johnson <mark@mijho.co>"]
description = "A Rust implementation of the Sort-friendly URI Reordering Transform (SURT)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mijho/surt-rs"
documentation = "https://github.com/mijho/surt-rs/blob/main/README.md"
keywords = ["surt", "normalization", "web-archiving", "archive"]
categories = ["text-processing"]
edition = "2021"
include = [
    "README.md",
    "LICENSE",
    "src/bin/surt.rs",
    "src/lib.rs",
    "Cargo.toml",
    "Cargo.lock"
]

[lib]
name = "surt_rs"
path = "src/lib.rs"

[[bin]]
name = "surt"
path = "src/bin/surt.rs"

[dependencies]
regex = "1.10.4"
url = "2.5.0"
url-escape = "0.1.1"

[dev-dependencies]
serde_json = "1.0.115"
